implement email verification logic